adding more template and snippets files

--- a/templates/base.htm
+++ b/templates/base.htm
@@ -40,157 +40,7 @@
 
 {% endblock content %}
 
-<footer class="footer section text-center">
-    <div class="section">
-        <div class="container">
-            <div class="row">
-            <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-                <h4 class="mb-4">Contact</h4>
-                <p>20464 Hirthe Curve Suite, Emardton, CT 12471-4107</p>
-                <p>+5(305) 785-0437</p>
-                <p>info@example.com</p>
-                <ul class="list-inline social-icons">
-                <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="ti-vimeo-alt"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="ti-google"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-                <h4 class="mb-4">Category</h4>
-                <ul class="pl-0 list-unstyled">
-                <li class="mb-2"><a class="text-color"assets/ href=.htm">Men</a></li>
-                <li class="mb-2"><a class="text-color"assets/ href=.htm">Women</a></li>
-                <li class="mb-2"><a class="text-color"assets/ href=.htm">Kids</a></li>
-                <li class="mb-2"><a class="text-color"assets/ href=.htm">Accessories</a></li>
-                <li class="mb-2"><a class="text-color"assets/ href=.htm">Shoe</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-                <h4 class="mb-4">Useful Link</h4>
-                <ul class="pl-0 list-unstyled">
-                <li class="mb-2"><a class="text-color" href="about.htm">News & Tips</a></li>
-                <li class="mb-2"><a class="text-color" href="about.htm">About Us</a></li>
-                <li class="mb-2"><a class="text-color" href="address.htm">Support</a></li>
-                <li class="mb-2"><a class="text-color"assets/ href=.htm">Our Shop</a></li>
-                <li class="mb-2"><a class="text-color" href="contact.htm">Contact Us</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 text-center text-sm-left">
-                <h4 class="mb-4">Our Policies</h4>
-                <ul class="pl-0 list-unstyled">
-                <li class="mb-2"><a class="text-color" href="404.htm">Privacy Policy</a></li>
-                <li class="mb-2"><a class="text-color" href="404.htm">Terms & Conditions</a></li>
-                <li class="mb-2"><a class="text-color" href="404.htm">Cookie Policy</a></li>
-                <li class="mb-2"><a class="text-color" href="404.htm">Terms of Sale</a></li>
-                <li class="mb-2"><a class="text-color" href="dashboard.htm">Free Shipping & Returns</a></li>
-                </ul>
-            </div>
-            </div>
-        </div>
-        </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="social-media">
-                    <li>
-                        <a href="https://www.facebook.com/themefisher">
-                            <i class="tf-ion-social-facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/themefisher">
-                            <i class="tf-ion-social-instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.twitter.com/themefisher">
-                            <i class="tf-ion-social-twitter"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.pinterest.com/themefisher/">
-                            <i class="tf-ion-social-pinterest"></i>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="footer-menu text-uppercase">
-                    <li>
-                        <a href="contact.htm">CONTACT</a>
-                    </li>
-                    <li>
-                        <a href="shop.htm">SHOP</a>
-                    </li>
-                    <li>
-                        <a href="pricing.htm">Pricing</a>
-                    </li>
-                    <li>
-                        <a href="contact.htm">PRIVACY POLICY</a>
-                    </li>
-                </ul>
-                <p class="copyright-text">Copyright &copy;2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a></p>
-            </div>
-        </div>
-    </div>
-</footer>
-    <!--------------------- chatpot html start here ---------------------->
-    <div class="wrapper-chat">
-    <div class="marvel-device nexus5" id="chat-bubble">
-        <div class="screen">
-        <div class="screen-container">
-
-            <div class="chat-header" onclick="openChatBubble()">
-            <div class="user-details">
-                <img alt="gravater" class="dp" src={% static '/images/favicon.png' %}>
-                <div class="detail-txt">
-                    <span class="username">
-                        MedHouse
-                    </span>
-                </div>
-            </div>
-
-            <div class="chat-options" onclick="openChatBubble()">
-                <span> 
-                    <i class="tf-ion-close-round"></i> 
-                </span>
-            </div>
-            </div>
-
-            <div class="chat-screen">
-            <div class="chat">
-                <!-- BEGINING OF MESSAGE-->
-                <div class="container1 fixed rev">
-                <ul class="message-body">
-    
-                </ul>
-    
-                </div>
-                <!-- END OF MESSAGE -->
-    
-                <!-- BEGINING OF INPUT BOTTOM -->
-                <div class="chat-footer">
-                <div class="bottom">
-                    <form class="form">
-                    <div class="sendMess">
-                        <button class="attachment"><i class="tf-ion-person"></i></button>
-                        <textarea id="text" name="" cols="20" rows="3" placeholder="enter your message">
-                        </textarea>
-                        <button class="send"><i class="tf-ion-android-send"></i></button>
-                    </div>
-                    </form>
-                </div>
-                </div>
-                <!-- END OF INPUT BOTTOM-->
-            </div>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
-
-    <!-- 
-    Essential Scripts
-    =====================================-->
+<!---------------------- Essential Scripts ----------------------->
     
     <!-- Main jQuery -->
     <script src={% static '/plugins/jquery/dist/jquery.min.js' %}></script>
@@ -214,7 +64,8 @@
     <script type="text/javascript" src={% static '/plugins/google-map/gmap.js' %}></script>
 
     <!-- Main Js File -->
-    <script src={%static '/js/script.js' %}></script>
+    <script src={% static '/js/script.js' %}></script>
     
-</body>
+    </body>
+    
 </html>
