--- a/medicalapp/templates/medicalapp/index.htm
+++ b/medicalapp/templates/medicalapp/index.htm
@@ -337,7 +337,7 @@
 		</div>
 		</div>
 	</div>
-	<div class="slider-item th-fullpage hero-area" style="background-image: url('. { % static "images/slider/slider-2.jpg" %} .');" >
+	<div class="slider-item th-fullpage hero-area" style="background-image: url('static/images/slider/slider-2.jpg');" >
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-8 text-left">
@@ -348,7 +348,7 @@
 		</div>
 		</div>
 	</div>
-	<div class="slider-item th-fullpage hero-area" style="background-image: url('static/images/slider/slider-2.jpg');" >
+	<div class="slider-item th-fullpage hero-area" style="background-image: url('static/images/slider/slider-3.jpg');" >
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-8 text-right">
@@ -726,5 +726,7 @@
 			</div>
 		</div>
 	</section> -->
-
+{% include 'medicalapp/snippets/footer1.htm'%}
+{% include 'medicalapp/snippets/footer2.htm'%}
+{% include 'medicalapp/snippets/chatpot.htm'%}
 {% endblock content %}
