working on  customer module branch

--- a/medicalapp/templates/medicalapp/snippets/chatbot.htm
+++ b/medicalapp/templates/medicalapp/snippets/chatbot.htm
@@ -1,5 +1,5 @@
 {% load static %}
-<!--------------------- chatpot html start here ---------------------->
+<!--------------------- chatbot html start here ---------------------->
 <div class="wrapper-chat">
     <div class="marvel-device nexus5" id="chat-bubble">
         <div class="screen">
