template update on customer module

--- a/customer/templates/customer/order.htm
+++ b/customer/templates/customer/order.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <section class="page-header">
     <div class="container">
@@ -91,6 +91,6 @@
         </div>
     </div>
 </section>
-{% include 'medicalapp/snippets/footer2.htm'%}
+{% include 'snippets/footer2.htm'%}
 {% endblock content %}
     
