--- a/medicalapp/templates/medicalapp/checkout.htm
+++ b/medicalapp/templates/medicalapp/checkout.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <section class="page-header">
 	<div class="container">
@@ -119,5 +119,5 @@
    </div>
 </div>
 
-{% include 'medicalapp/snippets/footer2.htm'%}
+{% include 'snippets/footer2.htm'%}
 {% endblock content %}
