--- a/customer/templates/customer/dashboard.htm
+++ b/customer/templates/customer/dashboard.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <section class="page-header">
     <div class="container">
@@ -82,5 +82,5 @@
         </div>
     </div>
 </section>
-{% include 'medicalapp/snippets/footer2.htm'%}
+{% include 'snippets/footer2.htm'%}
 {% endblock content %}
