--- a/medicalapp/templates/medicalapp/confirmation.htm
+++ b/medicalapp/templates/medicalapp/confirmation.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <!-- Page Wrapper -->
 <section class="page-wrapper success-msg">
@@ -21,5 +21,5 @@
 </section>
 <!-- /.page-warpper -->
   
-{% include 'medicalapp/snippets/footer2.htm'%}
+{% include 'snippets/footer2.htm'%}
 {% endblock content %}
