--- a/medicalapp/templates/medicalapp/contact.htm
+++ b/medicalapp/templates/medicalapp/contact.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <section class="page-header">
 	<div class="container">
@@ -102,5 +102,5 @@
 	</div>
 </section>
 	
-{% include 'medicalapp/snippets/footer2.htm'%}
+{% include 'snippets/footer2.htm'%}
 {% endblock content %}
