--- a/medicalapp/templates/medicalapp/doctor.htm
+++ b/medicalapp/templates/medicalapp/doctor.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <section class="page-header">
     <div class="container">
@@ -233,8 +233,8 @@
 </section>
 <hr>
 
-{% include 'medicalapp/snippets/footer1.htm'%}
-{% include 'medicalapp/snippets/footer2.htm'%}
-{% include 'medicalapp/snippets/chatpot.htm'%}
+{% include 'snippets/footer1.htm'%}
+{% include 'snippets/footer2.htm'%}
+{% include 'snippets/chatbot.htm'%}
 
 {% endblock content %}
