--- a/medicalapp/templates/medicalapp/shop-sidebar.htm
+++ b/medicalapp/templates/medicalapp/shop-sidebar.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <section class="page-header">
 	<div class="container">
@@ -336,12 +336,12 @@
 					</div>
 				</div>
 			</div>
-		    {% include 'medicalapp/snippets/product-model.htm' %}
+		    {% include 'snippets/product-model.htm' %}
 		
 		</div>
 	</div>
 </section>
 
-{% include 'medicalapp/snippets/footer2.htm'%}
-{% include 'medicalapp/snippets/chatpot.htm'%}
+{% include 'snippets/footer2.htm'%}
+{% include 'snippets/chatbot.htm'%}
 {% endblock content %}
