--- a/medicalapp/templates/medicalapp/shop.htm
+++ b/medicalapp/templates/medicalapp/shop.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'medicalapp/snippets/header.htm'%}
+{% include 'snippets/header.htm'%}
 
 <section class="page-header">
     <div class="container">
@@ -295,6 +295,6 @@
     </div><!-- /.modal -->
 </section>
 
-{% include 'medicalapp/snippets/footer2.htm'%}
-{% include 'medicalapp/snippets/chatpot.htm'%}
+{% include 'snippets/footer2.htm'%}
+{% include 'snippets/chatbot.htm'%}
 {% endblock content %}
