route in htm and datepicker

--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -91,7 +91,12 @@
 
                     <!-- account -->
                     <li class="#">
-                        <a href="/login.htm">
+                        <a href="/customer/login">
+                            <i class="tf-ion-android-person"></i> Account</a>
+                        </a>
+                    </li>
+                    <li class="#">
+                        <a href="/vendor/login">
                             <i class="tf-ion-android-person"></i> Account</a>
                         </a>
                     </li>
