dashboard related update on vendor module

--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -87,7 +87,8 @@
                                 <form action="post"><input type="search" class="form-control" placeholder="Search..."></form>
                             </li>
                         </ul>
-                    </li><!-- / Search -->
+                    </li><!--
+                         / Search -->
 
                     <!-- account -->
                     <li class="#">
@@ -235,7 +236,7 @@
                                 <!-- Mega Menu -->
                                 <div class="col-sm-3 col-xs-12">
                                     <a href="shop.htm">
-                                        <img class="img-responsive" src= {% static 'images/shop/header-img.jpg' %}alt="menu image" />
+                                        <img class="img-responsive" src= {% static 'images/shop/header-img.jpg' %} alt="menu image" />
                                     </a>
                                 </div>
                             </div><!-- / .row -->
