add product button added

--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -276,6 +276,7 @@
 
             <!-- prescription Doctor -->
             <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full btn-pre" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></span>
+            <span class="li" style="margin-top: 20px;"><a href="/product/signup" class="btn btn-secondary btn-small btn-round-full btn-pre" ><i class="tf-ion-android-add"></i> Add Product</a></span>
 
                         
             <!-- .modal -->
