--- a/product/templates/product/signup.htm
+++ b/product/templates/product/signup.htm
@@ -12,14 +12,16 @@
                 Med-House
               </span>
             </div>
-            <h3 class="text-center">Add Product</h3>
+            
+            <h3 class="text-center"><i class="tf-ion-android-add"></i> Add Product</h3>
+            <p>choose to add a product</p>
             <div id="mybutton">
               <button type="submit" class="btn btn-main" value="button1" id="btn1" style="background-color: gray;">medicine</button>
               <button type="submit" class="btn btn-main" value="button2" id="btn2">Device</button>
               <button type="submit" class="btn btn-main"  value="button3" id="btn3">hygenic</button>
             </div>
             <!-- medicine form -->
-            <form class="text-left clearfix" action="index.htm" id="medicine">
+            <form class="text-left clearfix" action="index.htm" id="medicine" style="display: block;">
               <div class="form-group">
                 <label for="inputName">Name:</label>
                 <input type="text" class="form-control"  placeholder="medicine name(metatitle)" required>
@@ -160,14 +162,6 @@
   $(document).ready(function(){
     $("#mybutton button").click(function (ev) {
         ev.preventDefault() 
-        if ($(this).attr("value") == "button1") {
-          $("#medicine").css("display", "block");
-          $("#device").css("display", "none");
-          $("#hygenic").css("display", "none");
-          $("#btn1").css("background-color", "gray");
-          $("#btn2").css("background-color", "black");
-          $("#btn3").css("background-color", "black");
-        }
         if ($(this).attr("value") == "button2") {
           $("#medicine").css("display", "none");
           $("#device").css("display", "block");
@@ -185,6 +179,14 @@
           $("#btn1").css("background-color", "black");
           $("#btn2").css("background-color", "black");
 
+        }
+        if ($(this).attr("value") == "button1") {
+          $("#medicine").css("display", "block");
+          $("#device").css("display", "none");
+          $("#hygenic").css("display", "none");
+          $("#btn1").css("background-color", "gray");
+          $("#btn2").css("background-color", "black");
+          $("#btn3").css("background-color", "black");
         }
     });
   });
