responsive added on forms

--- a/product/templates/product/signup.htm
+++ b/product/templates/product/signup.htm
@@ -6,11 +6,15 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="block text-center">
-            <img alt="gravater" class="dp" src={% static '/images/favicon.png' %}>
+            <a href="/">
+              <img alt="gravater" class="dp" src={% static '/images/favicon.png' %}>
+            </a>
             <div class="detail-txt">
-              <span class="username">
-                Med-House
-              </span>
+              <a href="/">
+                <span class="username">
+                  Med-House
+                </span>
+              </a>
             </div>
             
             <h3 class="text-center"><i class="tf-ion-android-add"></i> Add Product</h3>
@@ -31,21 +35,21 @@
                 <input type="text" class="form-control"  placeholder="Chemical Official name">
               </div>
               <div class="form-row">
-                <div class="form-group col-md-6" style="padding-left: 0;">
+                <div class="form-group col-md-6 leftside">
                   <label for="inputPrice">Price</label>
                   <input type="text" class="form-control" id="inputPrice" placeholder="Price" required>
                 </div>
-                <div class="form-group col-md-6" style="padding-right: 0;">
+                <div class="form-group col-md-6 rightside">
                   <label for="inputQuantity">Quantity</label>
                   <input type="text" class="form-control" id="inputQuantity" placeholder="Quantity" required>
                 </div>
               </div>
               <div class="form-row">
-                <div class="form-group col-md-6" style="padding-left: 0;">
+                <div class="form-group col-md-6 leftside">
                   <label for="inputManifactureDate">Manufacture Date</label>
                   <input type="text" class="form-control" id="inputManifactureDate" placeholder="Manufacture Date" required>
                 </div>
-                <div class="form-group col-md-6" style="padding-right: 0;">
+                <div class="form-group col-md-6 rightside">
                   <label for="inputExpiryDate">Expiry Date</label>
                   <input type="text" class="form-control" id="inputExpiryDate" placeholder="Expiry Date" required>
                 </div>
@@ -78,11 +82,11 @@
                 <input type="text" class="form-control"  placeholder="Chemical Official name">
               </div>
               <div class="form-row">
-                <div class="form-group col-md-6" style="padding-left: 0;">
+                <div class="form-group col-md-6 leftside">
                   <label for="inputPrice">Price</label>
                   <input type="text" class="form-control" id="inputPrice" placeholder="Price" required>
                 </div>
-                <div class="form-group col-md-6" style="padding-right: 0;">
+                <div class="form-group col-md-6 rightside">
                   <label for="inputQuantity">Quantity</label>
                   <input type="text" class="form-control" id="inputQuantity" placeholder="Quantity" required>
                 </div>
@@ -116,21 +120,21 @@
                 <input type="text" class="form-control"  placeholder="Chemical Official name">
               </div>
               <div class="form-row">
-                <div class="form-group col-md-6" style="padding-left: 0;">
+                <div class="form-group col-md-6 leftside">
                   <label for="inputPrice">Price</label>
                   <input type="text" class="form-control" id="inputPrice" placeholder="Price" required>
                 </div>
-                <div class="form-group col-md-6" style="padding-right: 0;">
+                <div class="form-group col-md-6 rightside">
                   <label for="inputQuantity">Quantity</label>
                   <input type="text" class="form-control" id="inputQuantity" placeholder="Quantity" required>
                 </div>
               </div>
               <div class="form-row">
-                <div class="form-group col-md-6"  style="padding-left: 0;">
+                <div class="form-group col-md-6 leftside">
                   <label for="inputManifactureDate">Manufacture Date</label>
                   <input type="text" class="form-control" id="inputManifactureDate" placeholder="Manufacture Date" required>
                 </div>
-                <div class="form-group col-md-6" style="padding-right: 0;">
+                <div class="form-group col-md-6 rightside">
                   <label for="inputExpiryDate">Expiry Date</label>
                   <input type="text" class="form-control" id="inputExpiryDate" placeholder="Expiry Date" required>
                 </div>
