--- a/templates/base.htm
+++ b/templates/base.htm
@@ -29,9 +29,12 @@
   <link rel="stylesheet" href={% static '/plugins/slick/slick.css' %}>
   <link rel="stylesheet" href={% static '/plugins/slick/slick-theme.css' %}>
   
+  
+  <!---hand.css-->>
+  <link rel="stylesheet" href={% static '/css/hand.css' %}>
+
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href={% static '/css/style.css' %}>
-
 </head>
 
 <body id="body">
