--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -28,7 +28,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-4 col-xs-12 col-sm-4">
+            <div class="col-md-9 col-xs-12 col-sm-4" id="listOfAccount">
                 <!-- Cart -->
                 <ul class="top-menu text-right list-inline">
                     <li class="dropdown cart-nav dropdown-slide">
@@ -275,7 +275,7 @@
             <!--/.navbar-collapse -->
 
             <!-- prescription Doctor -->
-            <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full btn-pre" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></span>
+            <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full btn-pre" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></button>
             <span class="li" style="margin-top: 20px;"><a href="/product/signup" class="btn btn-secondary btn-small btn-round-full btn-pre" ><i class="tf-ion-android-add"></i> Add Product</a></span>
 
                         
