--- a/medicalapp/templates/medicalapp/doctor.htm
+++ b/medicalapp/templates/medicalapp/doctor.htm
@@ -39,7 +39,7 @@
                         <div class="text-center m-t-20">
                             <div class="form-group">
                                 <label for="OpenfileUpload">Upload Prescription</label>
-                                <input class="mt-20" style="padding-left: 154px;" type="file" id="OpenfileUpload">
+                                <input class="mt-20" style="padding-left: 154px;" type="file" id="fileUpload">
                             </div>
                         </div>
                     </div>
