--- a/product/templates/product/signup.htm
+++ b/product/templates/product/signup.htm
@@ -47,11 +47,11 @@
               <div class="form-row">
                 <div class="form-group col-md-6 leftside">
                   <label for="inputManifactureDate">Manufacture Date</label>
-                  <input type="text" class="form-control" id="inputManifactureDate" placeholder="Manufacture Date" required>
+                  <input type="text" class="form-control datepicker-test" id="inputManifactureDate" placeholder="Manufacture Date" required>
                 </div>
                 <div class="form-group col-md-6 rightside">
                   <label for="inputExpiryDate">Expiry Date</label>
-                  <input type="text" class="form-control" id="inputExpiryDate" placeholder="Expiry Date" required>
+                  <input type="text" class="form-control datepicker-test" id="inputExpiryDate" placeholder="Expiry Date" required>
                 </div>
               </div>
               <div class="form-group">
@@ -64,7 +64,7 @@
               </div>
               <div class="form-group">
                 <label for="OpenfileUpload">picture upload</label>
-								<input class="mt-20" type="file" id="OpenfileUpload" required>
+								<input class="mt-20" type="file" id="medicineFile" required>
               </div>
               <hr>
               <div class="text-center">
@@ -102,7 +102,7 @@
               </div>
               <div class="form-group">
                 <label for="OpenfileUpload">picture upload</label>
-								<input class="mt-20" type="file" id="OpenfileUpload" required>
+								<input class="mt-20" type="file" id="deviceFile" required>
               </div>
               <hr>
               <div class="text-center">
@@ -132,11 +132,11 @@
               <div class="form-row">
                 <div class="form-group col-md-6 leftside">
                   <label for="inputManifactureDate">Manufacture Date</label>
-                  <input type="text" class="form-control" id="inputManifactureDate" placeholder="Manufacture Date" required>
+                  <input type="text" class="form-control datepicker-test" id="inputManifactureDate" placeholder="Manufacture Date" required>
                 </div>
                 <div class="form-group col-md-6 rightside">
                   <label for="inputExpiryDate">Expiry Date</label>
-                  <input type="text" class="form-control" id="inputExpiryDate" placeholder="Expiry Date" required>
+                  <input type="text" class="form-control datepicker-test" id="inputExpiryDate" placeholder="Expiry Date" required>
                 </div>
               </div>
               <div class="form-group">
@@ -149,7 +149,7 @@
               </div>
               <div class="form-group">
                 <label for="OpenfileUpload">picture upload</label>
-								<input class="mt-20" type="file" id="OpenfileUpload" required>
+								<input class="mt-20" type="file" id="hygenicFile" required>
               </div>
               <hr>
               <div class="text-center">
