button logout and header ui added

--- a/medicalapp/templates/medicalapp/doctor.htm
+++ b/medicalapp/templates/medicalapp/doctor.htm
@@ -3,8 +3,8 @@
 
 {% block content %}
 {% include 'snippets/header.htm'%}
-
-<section class="page-header">
+{% include 'snippets/page-header.htm'%}
+<!-- <section class="page-header">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!-- .modal -->
 <div class="modal fade" id="Mydoctormodal">
