--- a/templates/snippets/chatbot.htm
+++ b/templates/snippets/chatbot.htm
@@ -6,20 +6,20 @@
         <div class="screen-container">
 
             <div class="chat-header" onclick="openChatBubble()">
-            <div class="user-details">
-                <img alt="gravater" class="dp" src={% static '/images/favicon.png' %}>
-                <div class="detail-txt">
-                    <span class="username">
-                        MedHouse
+                <div class="user-details">
+                    <img alt="gravater" class="dp" src={% static '/images/favicon.png' %}>
+                    <div class="detail-txt">
+                        <span class="username">
+                            MedHouse
+                        </span>
+                    </div>
+                </div>
+
+                <div class="chat-options">
+                    <span> 
+                        <i class="tf-ion-close-round"></i> 
                     </span>
                 </div>
-            </div>
-
-            <div class="chat-options" onclick="openChatBubble()">
-                <span> 
-                    <i class="tf-ion-close-round"></i> 
-                </span>
-            </div>
             </div>
 
             <div class="chat-screen">
