--- a/templates/base.htm
+++ b/templates/base.htm
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href={% static '/plugins/slick/slick-theme.css' %}>
   
   
-  <!---hand.css-->>
+  <!---hand.css-->
   <link rel="stylesheet" href={% static '/css/hand.css' %}>
 
   <!-- Main Stylesheet -->
