--- a/templates/snippets/page-header.htm
+++ b/templates/snippets/page-header.htm
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content">
-                    <h1 class="page-name">{{topic}}</h1>
+                    <h1 class="page-name">{{context.topic}}</h1>
                     <ol class="breadcrumb">
-                        <li><a href="/">{{account}}</a></li>
-                        <li class="active">{{recent_page}}</li>
+                        <li><a href="/">{{context.account}}</a></li>
+                        <li class="active">{{context.recent_page}}</li>
                     </ol>
                 </div>
             </div>
