product add and display

--- a/templates/snippets/vendor-dashboard-header.htm
+++ b/templates/snippets/vendor-dashboard-header.htm
@@ -21,5 +21,5 @@
         </div>
     </div>
 </section>
-<span class="li" style="margin-top: 20px;"><a href="/product/signup" class="btn btn-secondary btn-small btn-round-full" id="add-btn" ><i class="tf-ion-android-add"></i> Product</a></span>
-<a href="#x" class="btn btn-transparent mt-20" id="logout">Log Out</a>
+<span class="li" style="margin-top: 20px;"><a href="/product/create/" class="btn btn-secondary btn-small btn-round-full" id="add-btn" ><i class="tf-ion-android-add"></i> Product</a></span>
+<a href="/vendor/logout/" class="btn btn-transparent mt-20" id="logout">Log Out</a>
