--- a/product/templates/product/detail.htm
+++ b/product/templates/product/detail.htm
@@ -2,23 +2,25 @@
 {% load static %}
 
 {% block content %}
-{% include 'snippets/header.htm'%}
+{% include 'snippets/vendor-dashboard-header.htm'%}
+{% include 'snippets/page-header.htm'%}
+
 <section class="single-product">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
+			<!-- <div class="col-md-6">
 				<ol class="breadcrumb">
 					<li><a href="index.htm">Home</a></li>
 					<li><a href="shop.htm">Shop</a></li>
 					<li class="active">Single Product</li>
 				</ol>
-			</div>
-			<div class="col-md-6">
+			</div> -->
+			<!-- <div class="col-md-6">
 				<ol class="product-pagination text-right">
 					<li><a href="blog-left-sidebar.htm"><i class="tf-ion-ios-arrow-left"></i> Next </a></li>
 					<li><a href="blog-left-sidebar.htm">Preview <i class="tf-ion-ios-arrow-right"></i></a></li>
 				</ol>
-			</div>
+			</div> -->
 		</div>
 		<div class="row mt-20">
 			<div class="col-md-5">
@@ -28,9 +30,9 @@
 							<!-- me art lab slider -->
 							<div class='carousel-inner '>
 								<div class='item active'>
-									<img src={% static 'images/shop/single-products/product-1.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-1.jpg" %} />
+									<img src="/media/{{product_img.image}}""  alt={{product_img.description}} data-zoom-image="/media/{{product_img.image}}"  />
 								</div>
-								<div class='item'>
+								<!-- <div class='item'>
 									<img src={% static 'images/shop/single-products/product-2.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-2.jpg" %} />
 								</div>
 								
@@ -45,7 +47,7 @@
 								</div>
 								<div class='item'>
 									<img src={% static 'images/shop/single-products/product-6.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-6.jpg" %} />
-								</div>
+								</div> -->
 								
 							</div>
 							
@@ -59,7 +61,7 @@
 						</div>
 						
 						<!-- thumb -->
-						<ol class='carousel-indicators mCustomScrollbar meartlab'>
+						<!-- <ol class='carousel-indicators mCustomScrollbar meartlab'>
 							<li data-target='#carousel-custom' data-slide-to='0' class='active'>
 								<img src={% static 'images/shop/single-products/product-1.jpg' %} alt='' />
 							</li>
@@ -81,55 +83,48 @@
 							<li data-target='#carousel-custom' data-slide-to='6'>
 								<img src={% static 'images/shop/single-products/product-7.jpg' %} alt='' />
 							</li>
-						</ol>
+						</ol> -->
 					</div>
 				</div>
 			</div>
 			<div class="col-md-7">
 				<div class="single-product-details">
-					<h2>Eclipse Crossbody</h2>
-					<p class="product-price">$300</p>
+					<h2>{{product.title}}</h2>
+					<p class="product-price">Rs. {{product.price}}</p>
 					
 					<p class="product-description mt-20">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum ipsum dicta quod, quia doloremque aut deserunt commodi quis. Totam a consequatur beatae nostrum, earum consequuntur? Eveniet consequatur ipsum dicta recusandae.
+						{{product.meta_title}}
 					</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, velit, sunt temporibus, nulla accusamus similique sapiente tempora, at atque cumque assumenda minus asperiores est esse sequi dolore magnam. Debitis, explicabo.</p>
-					<div class="color-swatches">
-						<span>color:</span>
-						<ul>
-							<li>
-								<a href="#!" class="swatch-violet"></a>
-							</li>
-							<li>
-								<a href="#!" class="swatch-black"></a>
-							</li>
-							<li>
-								<a href="#!" class="swatch-cream"></a>
-							</li>
-						</ul>
+					<div class="product-category">
+						<span>Type:</span>
+						{{product.product_type}}
 					</div>
-					<div class="product-size">
-						<span>Size:</span>
-						<select class="form-control">
-							<option>S</option>
-							<option>M</option>
-							<option>L</option>
-							<option>XL</option>
-						</select>
-					</div>
+					{% if product.product_type|stringformat:"s" == "medicine" %}
+						<div class="product-quantity">
+							<span>Generic Name:</span>
+							{{product.medical_name}}
+						</div>
+					{% endif %}
 					<div class="product-quantity">
 						<span>Quantity:</span>
-						<div class="product-quantity-slider">
-							<input id="product-quantity" type="text" value="0" name="product-quantity">
+						{{product.quantity}}
+					</div>
+					{% if product.product_type|stringformat:"s" != "device" %}
+						<div class="product-quantity">
+							<span>Manufactured Date:</span>
+							{{product.manufacture_date}}
 						</div>
+						<div class="product-quantity">
+							<span>Expiry Date:</span>
+							{{product.expiry_date}}
+						</div>
+					{% endif %}
+				
+					<div class="product-quantity">
+						<span>Manufacturer:</span>
+						{{product.manufacturer}}
 					</div>
-					<div class="product-category">
-						<span>Categories:</span>
-						<ul>
-							<li><a href="product-single.htm">Products</a></li>
-							<li><a href="product-single.htm">Soap</a></li>
-						</ul>
-					</div>
+					
 					<a href="cart.htm" class="btn btn-main mt-20">update</a>
 				</div>
 			</div>
@@ -144,8 +139,7 @@
 					<div class="tab-content patternbg">
 						<div id="details" class="tab-pane fade active in">
 							<h4>Product Description</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut per spici</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis delectus quidem repudiandae veniam distinctio repellendus magni pariatur molestiae asperiores animi, eos quod iusto hic doloremque iste a, nisi iure at unde molestias enim fugit, nulla voluptatibus. Deserunt voluptate tempora aut illum harum, deleniti laborum animi neque, praesentium explicabo, debitis ipsa?</p>
+							<p>{{product.description}}</p>
 						</div>
 						<div id="reviews" class="tab-pane fade">
 							<div class="post-comments">
@@ -234,7 +228,7 @@
 		</div>
 	</div>
 </section>
-<section class="products related-products section">
+<!-- <section class="products related-products section">
 	<div class="container">
 		<div class="row">
 			<div class="title text-center">
@@ -342,7 +336,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 
 {% include 'snippets/vender-product-model.htm'%}
