--- a/product/templates/product/form.htm
+++ b/product/templates/product/form.htm
@@ -18,142 +18,178 @@
             </div>
             
             <h3 class="text-center"><i class="tf-ion-android-add"></i> Add Product</h3>
-            <p>choose to add a product</p>
+            <p>Choose to add a product</p>
             <div id="mybutton">
               <button type="submit" class="btn btn-main" value="button1" id="btn1" style="background-color: gray;">medicine</button>
               <button type="submit" class="btn btn-main" value="button2" id="btn2">Device</button>
               <button type="submit" class="btn btn-main"  value="button3" id="btn3">hygenic</button>
             </div>
             <!-- medicine form -->
-            <form class="text-left clearfix" action="index.htm" id="medicine" style="display: block;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/create/" method="POST" id="medicine" style="display: block;">
+              {% csrf_token %}
+              <input type="hidden" name="product_type" value="medicine">
               <div class="form-group">
                 <label for="inputName">Name:</label>
-                <input type="text" class="form-control"  placeholder="medicine name(metatitle)" required>
+                {{form.title}}
+                <p class="help">{{form.title.errors }}</p>
               </div>
               <div class="form-group">
-                <label for="inputOfficialChemicalName">Official Chemical Name:</label>
-                <input type="text" class="form-control"  placeholder="Chemical Official name">
+                <label for="inputOfficialChemicalName">Meta Title</label>
+                {{form.meta_title}}
+                <p class="help">{{form.meta_title.errors }}</p>
+              </div>
+              <div class="form-group">
+                <label for="inputOfficialChemicalName">Generic Name</label>
+                {{form.medical_name}}
+                <p class="help">{{form.medical_name.errors }}</p>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6 leftside">
                   <label for="inputPrice">Price</label>
-                  <input type="text" class="form-control" id="inputPrice" placeholder="Price" required>
+                  {{form.price}}
+                  <p class="help">{{form.price.errors }}</p>
                 </div>
                 <div class="form-group col-md-6 rightside">
                   <label for="inputQuantity">Quantity</label>
-                  <input type="text" class="form-control" id="inputQuantity" placeholder="Quantity" required>
+                  {{form.quantity}}
+                  <p class="help">{{form.quantity.errors }}</p>
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6 leftside">
-                  <label for="inputManifactureDate">Manufacture Date</label>
-                  <input type="text" class="form-control datepicker-test" id="inputManifactureDate" placeholder="Manufacture Date" required>
+                  <label for="inputManifactureDate">Manufactured Date</label>
+                  {{form.manufacture_date}}
+                  <p class="help">{{form.manufacture_date.errors }}</p>
                 </div>
                 <div class="form-group col-md-6 rightside">
                   <label for="inputExpiryDate">Expiry Date</label>
-                  <input type="text" class="form-control datepicker-test" id="inputExpiryDate" placeholder="Expiry Date" required>
+                  {{form.expiry_date}}
+                  <p class="help">{{form.expiry_date.errors }}</p>
                 </div>
               </div>
               <div class="form-group">
-                <label for="inputManufacture">Manufacture</label>
-                <input type="text" class="form-control" placeholder="Manufacture">
+                <label for="inputManufacture">Manufactured by</label>
+                {{form.manufacturer}}
+                <p class="help">{{form.manufacturer.errors }}</p>
               </div>
               <div class="form-group">
                 <label for="InputDescription">Description</label>
-                <textarea class="form-control" id="InputDescription" rows="3"></textarea>
+                {{form.description}}
+                <p class="help">{{form.description.errors }}</p>
               </div>
               <div class="form-group">
-                <label for="OpenfileUpload">picture upload</label>
-								<input class="mt-20" type="file" id="medicineFile" required>
+                <label for="OpenfileUpload">Upload the picture of the product</label>
+                {{img_form.image}}
+                {{img_form.image.errors}}   
               </div>
               <hr>
               <div class="text-center">
-                <button type="submit" class="btn btn-main text-center" >Add Me</button>
+                <button type="submit" class="btn btn-main text-center" >Add Product</button>
               </div>
             </form>
             <!-- device form -->
-            <form class="text-left clearfix" action="index.htm" id="device" style="display: none;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/create/" method="POST" id="device" style="display: none;">
+              {% csrf_token %}
+              <input type="hidden" name="product_type" value="medicine">
               <div class="form-group">
                 <label for="inputName">Name:</label>
-                <input type="text" class="form-control"  placeholder="device name(metatitle)" required>
+                {{form.title}}
+                <p class="help">{{form.title.errors }}</p>
               </div>
               <div class="form-group">
-                <label for="inputOfficialChemicalName">Official Chemical Name:</label>
-                <input type="text" class="form-control"  placeholder="Chemical Official name">
+                <label for="inputOfficialChemicalName">Meta Title</label>
+                {{form.meta_title}}
+                <p class="help">{{form.meta_title.errors }}</p>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6 leftside">
                   <label for="inputPrice">Price</label>
-                  <input type="text" class="form-control" id="inputPrice" placeholder="Price" required>
+                  {{form.price}}
+                  <p class="help">{{form.price.errors }}</p>
                 </div>
                 <div class="form-group col-md-6 rightside">
                   <label for="inputQuantity">Quantity</label>
-                  <input type="text" class="form-control" id="inputQuantity" placeholder="Quantity" required>
+                  {{form.quantity}}
+                  <p class="help">{{form.quantity.errors }}</p>
                 </div>
               </div>
-             
               <div class="form-group">
-                <label for="inputManufacture">Manufacture</label>
-                <input type="text" class="form-control" placeholder="Manufacture">
+                <label for="inputManufacture">Manufactured by</label>
+                {{form.manufacturer}}
+                <p class="help">{{form.manufacturer.errors }}</p>
               </div>
               <div class="form-group">
                 <label for="InputDescription">Description</label>
-                <textarea class="form-control" id="InputDescription" rows="3"></textarea>
+                {{form.description}}
+                <p class="help">{{form.description.errors }}</p>
               </div>
               <div class="form-group">
-                <label for="OpenfileUpload">picture upload</label>
-								<input class="mt-20" type="file" id="deviceFile" required>
+                <label for="OpenfileUpload">Upload the picture of the product</label>
+                {{img_form.image}}
+                {{img_form.image.errors}}   
+              <!-- <input class="mt-20" type="file" id="image" multiple required> -->
               </div>
               <hr>
               <div class="text-center">
-                <button type="submit" class="btn btn-main text-center" >Add Me</button>
+                <button type="submit" class="btn btn-main text-center" >Add Product</button>
               </div>
             </form>
             <!-- hygenic form -->
-            <form class="text-left clearfix" action="index.htm" id="hygenic" style="display: none;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/create/" method="POST" id="hygenic" style="display: none;">
+              {% csrf_token %}
+              <input type="hidden" name="product_type" value="medicine">
               <div class="form-group">
                 <label for="inputName">Name:</label>
-                <input type="text" class="form-control"  placeholder="hygenic name(metatitle)" required>
+                {{form.title}}
+                <p class="help">{{form.title.errors }}</p>
               </div>
               <div class="form-group">
-                <label for="inputOfficialChemicalName">Official Chemical Name:</label>
-                <input type="text" class="form-control"  placeholder="Chemical Official name">
+                <label for="inputOfficialChemicalName">Meta Title</label>
+                {{form.meta_title}}
+                <p class="help">{{form.meta_title.errors }}</p>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6 leftside">
                   <label for="inputPrice">Price</label>
-                  <input type="text" class="form-control" id="inputPrice" placeholder="Price" required>
+                  {{form.price}}
+                  <p class="help">{{form.price.errors }}</p>
                 </div>
                 <div class="form-group col-md-6 rightside">
                   <label for="inputQuantity">Quantity</label>
-                  <input type="text" class="form-control" id="inputQuantity" placeholder="Quantity" required>
+                  {{form.quantity}}
+                  <p class="help">{{form.quantity.errors }}</p>
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-6 leftside">
-                  <label for="inputManifactureDate">Manufacture Date</label>
-                  <input type="text" class="form-control datepicker-test" id="inputManifactureDate" placeholder="Manufacture Date" required>
+                  <label for="inputManifactureDate">Manufactured Date</label>
+                  {{form.manufacture_date}}
+                  <p class="help">{{form.manufacture_date.errors }}</p>
                 </div>
                 <div class="form-group col-md-6 rightside">
                   <label for="inputExpiryDate">Expiry Date</label>
-                  <input type="text" class="form-control datepicker-test" id="inputExpiryDate" placeholder="Expiry Date" required>
+                  {{form.expiry_date}}
+                  <p class="help">{{form.expiry_date.errors }}</p>
                 </div>
               </div>
               <div class="form-group">
-                <label for="inputManufacture">Manufacture</label>
-                <input type="text" class="form-control" placeholder="Manufacture">
+                <label for="inputManufacture">Manufactured by</label>
+                {{form.manufacturer}}
+                <p class="help">{{form.manufacturer.errors }}</p>
               </div>
               <div class="form-group">
                 <label for="InputDescription">Description</label>
-                <textarea class="form-control" id="InputDescription" rows="3"></textarea>
+                {{form.description}}
+                <p class="help">{{form.description.errors }}</p>
               </div>
               <div class="form-group">
-                <label for="OpenfileUpload">picture upload</label>
-								<input class="mt-20" type="file" id="hygenicFile" required>
+                <label for="OpenfileUpload">Upload the picture of the product</label>
+                {{img_form.image}}
+                {{img_form.image.errors}}   
               </div>
               <hr>
               <div class="text-center">
-                <button type="submit" class="btn btn-main text-center" >Add Me</button>
+                <button type="submit" class="btn btn-main text-center" >Add Product</button>
               </div>
             </form>
           </div>
