--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -212,17 +212,7 @@
                         </div><!-- / .dropdown-menu -->
                     </li><!-- / Pages -->
 
-                    <!-- Shop -->
-                    	<!-- Languages -->
-					<li class="commonSelect">
-						<select class="form-control">
-							<option>EN</option>
-							<option>DE</option>
-							<option>FR</option>
-							<option>ES</option>
-						</select>
-					</li>
-					<!-- / Languages -->
+          
                     
                 </ul><!-- / .nav .navbar-nav -->
             </div>
@@ -230,7 +220,27 @@
 
             <!-- prescription Doctor -->
             <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full btn-pre" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></button>
-            <span class="li" style="margin-top: 20px;"><a href="/product/signup" class="btn btn-secondary btn-small btn-round-full btn-pre" ><i class="tf-ion-android-add"></i> Add Product</a></span>
+            <!-- <span class="li dropdown dropdown-slide" style="margin-top: 20px;">
+                <a href="/product/signup" class="btn btn-secondary btn-small btn-round-full btn-pre" ><i class="></i> Add Product</a>
+            </span> -->
+            <span class="dropdown dropdown-slide" id="btn-add">
+                <a href="#!" class="dropdown-toggle  btn-small" data-toggle="dropdown" data-hover="dropdown" data-delay="350"
+                    role="button" aria-haspopup="true" aria-expanded="false">Add Product <span
+                        class="tf-ion-android-add"></span></a>
+                <div class="dropdown-menu">
+                    <div class="row">
+
+                        <!-- Basic -->
+                        <div class="col-lg-12 col-md-6 mb-sm-3">
+                            <ul>
+                                <li><a href="/product/medicine">Medicine</a></li>
+                                <li><a href="/product/device">Device</a></li>
+                                <li><a href="/product/hygenic">Hygenic</a></li>
+                            </ul>
+                        </div>
+                    </div><!-- / .row -->
+                </div><!-- / .dropdown-menu -->
+            </span><!-- / Elements -->
 
                         
             <!-- .modal -->
