customer login, registration and profile

--- a/customer/templates/customer/login.htm
+++ b/customer/templates/customer/login.htm
@@ -11,7 +11,7 @@
                     <img src="images/logo.png" alt="">
                     </a>
                     <h2 class="text-center">Welcome Back</h2>
-                    <form class="text-left clearfix" method="POST" action="/vendor/login/" >
+                    <form class="text-left clearfix" method="POST" action="/customer/login/" >
                         {% csrf_token %}
                         <div class="form-group">
                             {{form.email}}
@@ -26,7 +26,7 @@
                             <button type="submit" class="btn btn-main text-center" >Login</button>
                         </div>
                     </form>
-                    <p class="mt-20">New in this site ?<a href="/vendor/signin/"> Create New Account</a></p>
+                    <p class="mt-20">New in this site ?<a href="/customer/signin/"> Create New Account</a></p>
                 </div>
             </div>
         </div>
