--- a/customer/templates/customer/dashboard.htm
+++ b/customer/templates/customer/dashboard.htm
@@ -9,20 +9,20 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
-                    <li><a class="active" href="/vendor/dashboard/">Dashboard</a></li>
-                    <li><a href="/vendor/order/">Orders</a></li>
-                    <li><a href="/vendor/address/">Address</a></li>
-                    <li><a href="/vendor/profile-details/">Profile Details</a></li>
+                    <li><a class="active" href="/customer/dashboard/">Dashboard</a></li>
+                    <li><a href="/customer/order/">Orders</a></li>
+                    <li><a href="/customer/address/">Address</a></li>
+                    <li><a href="/customer/profile-details/">Profile Details</a></li>
                     <li><a href="/product/list/">Product Details</a></li>
                 </ul>
                 <div class="dashboard-wrapper user-dashboard">
                     <div class="media">
                         <div class="pull-left">
-                            <!-- <img class="media-object user-img" src='/media/'.{{vendor_img.image}} alt="Image"> -->
-                            <img class="media-object user-img" src="/media/{{vendor_img.image}} " alt="Profile image of {{vendor.shop_name}}">
+                            <!-- <img class="media-object user-img" src='/media/'.{{customer_img.image}} alt="Image"> -->
+                            <img class="media-object user-img" src="/media/{{customer_img.image}} " alt="Profile image of {{customer.shop_name}}">
                         </div>
                         <div class="media-body">
-                            <h2 class="media-heading">Welcome {{vendor.full_name}}</h2>
+                            <h2 class="media-heading">Welcome {{customer.full_name}}</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, iure, est. Sit mollitia est maxime! Eos
                                 cupiditate tempore, tempora omnis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, nihil. </p>
                         </div>
