--- a/customer/templates/customer/profile-details.htm
+++ b/customer/templates/customer/profile-details.htm
@@ -10,37 +10,29 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
-                    <li><a href="/vendor/dashboard/">Dashboard</a></li>
-                    <li><a href="/vendor/order/">Orders</a></li>
-                    <li><a href="/vendor/address/">Address</a></li>
-                    <li><a class="active" href="/vendor/profile-details/">Profile Details</a></li>
-                    <li><a href="/vendor/product-details/">Product Details</a></li>
+                    <li><a href="/customer/dashboard/">Dashboard</a></li>
+                    <li><a href="/customer/order/">Orders</a></li>
+                    <li><a href="/customer/address/">Address</a></li>
+                    <li><a class="active" href="/customer/profile-details/">Profile Details</a></li>
+                    <li><a href="/customer/product-details/">Product Details</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile">
                     <div class="media">
                         <div class="pull-left text-center" href="#!">
-                            <img class="media-object user-img" src="/media/{{vendor_img.image}}" alt="Profile image of {{vendor.shop_name}}">
+                            <img class="media-object user-img" src="/media/{{customer_img.image}}" alt="Profile image of {{customer.shop_name}}">
                             <a class="btn btn-main mt-20" data-target="#MyProfileModal" data-toggle="modal">Edit <i class="tf-ion-edit"></i></a>
                         </div>
                         <div class="media-body">
                             <ul class="user-profile-list">
-                                <li>Vendor Details</li>
-                                <li><span>Full Name:</span>{{vendor.full_name}}</li>
-                                <li><span>Gender:</span>{{vendor.gender}}</li>
-                                <li><span>Email:</span>{{vendor.email}}</li>
-                                <li><span>Phone:</span>{{vendor.contact_number}}</li>
-                                <li><span>Date of Birth:</span>{{vendor.dob}}</li>
-                                <li><span>Address:</span>{{vendor.address}}</li>
+                                <li>Customer Details</li>
+                                <li><span>Full Name:</span>{{customer.full_name}}</li>
+                                <li><span>Gender:</span>{{customer.gender}}</li>
+                                <li><span>Email:</span>{{customer.email}}</li>
+                                <li><span>Phone:</span>{{customer.contact_number}}</li>
+                                <li><span>Date of Birth:</span>{{customer.dob}}</li>
+                                <li><span>Address:</span>{{customer.address}}</li>
                             </ul>
                             <hr>
-                            <ul class="user-profile-list">
-                                <li>Pharmacy Details</li>
-                                <li><span>Shop Name:</span>{{vendor.shop_name}}</li>
-                                <li><span>Registered Business Name:</span>{{vendor.business_name}}</li>
-                                <li><span>PAN Number:</span>{{vendor.pan_number}}</li>
-                                <li><span>VAT Number:</span>{{vendor.vat_number}}</li>
-                            </ul>
-                            
                         </div>
                     </div>
                 </div>
@@ -63,7 +55,7 @@
                 <hr>
                 <div class="media dashboard-wrapper">
                     <div class="text-center" href="#!">
-                        <img class="media-object user-img" id="profile" src="/media/{{vendor_img.image}}"  alt="Profile image of {{vendor.shop_name}}">
+                        <img class="media-object user-img" id="profile" src="/media/{{customer_img.image}}"  alt="Profile image of {{customer.shop_name}}">
                         <a href="#x" class="btn btn-transparent mt-20">Change Image</a>
                     </div>
                 <dl class="dl-horizontal details-list">
@@ -80,11 +72,11 @@
                     <dt class="mt-10">Birth of date:</dt>
                     <dd><input type="text" class="form-control datepicker-test"  placeholder="07/18/1988"></dd>
                     <dt>Registered Name:</dt>
-                    <dd>{{vendor.business_name}}</dd>
+                    <dd>{{customer.business_name}}</dd>
                     <dt>PAN NO</dt>
-                    <dd>{{vendor.pan_number}}</dd>
+                    <dd>{{customer.pan_number}}</dd>
                     <dt>VAT NO</dt>
-                    <dd>{{vendor.vat_number}}</dd> 
+                    <dd>{{customer.vat_number}}</dd> 
                 </dl>
             </div>                         
             <div class="modal-footer">
