--- a/templates/snippets/vendor-dashboard-header.htm
+++ b/templates/snippets/vendor-dashboard-header.htm
@@ -19,7 +19,24 @@
                 </a>
             </div>
         </div>
+        <span class="dropdown dropdown-slide" id="btn-add">
+            <a href="#!" class="dropdown-toggle  btn-small" data-toggle="dropdown" data-hover="dropdown" data-delay="350"
+                role="button" aria-haspopup="true" aria-expanded="false">Add Product <span
+                    class="tf-ion-android-add"></span></a>
+            <div class="dropdown-menu">
+                <div class="row">
+                    <!-- Basic -->
+                    <div class="col-lg-12 col-md-6 mb-sm-3">
+                        <ul>
+                            <li><a href="/product/add/medicine/">Medicine</a></li>
+                            <li><a href="/product/add/device/">Device</a></li>
+                            <li><a href="/product/add/hygenic_product/">Hygenic Product</a></li>
+                        </ul>
+                    </div>
+                </div><!-- / .row -->
+            </div><!-- / .dropdown-menu -->
+        </span>
     </div>
 </section>
-<span class="li" style="margin-top: 20px;"><a href="/product/create/" class="btn btn-secondary btn-small btn-round-full" id="add-btn" ><i class="tf-ion-android-add"></i> Product</a></span>
+<!-- <span class="li" style="margin-top: 20px;"><a href="/product/create/" class="btn btn-secondary btn-small btn-round-full" id="add-btn" ><i class="tf-ion-android-add"></i> Product</a></span> -->
 <a href="/vendor/logout/" class="btn btn-transparent mt-20" id="logout">Log Out</a>
