--- a/product/templates/product/detail.htm
+++ b/product/templates/product/detail.htm
@@ -29,25 +29,15 @@
 						<div class='carousel-outer'>
 							<!-- me art lab slider -->
 							<div class='carousel-inner '>
-								<div class='item active'>
-									<img src="/media/{{product_img.image}}""  alt={{product_img.description}} data-zoom-image="/media/{{product_img.image}}"  />
-								</div>
-								<!-- <div class='item'>
-									<img src={% static 'images/shop/single-products/product-2.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-2.jpg" %} />
-								</div>
-								
-								<div class='item'>
-									<img src={% static 'images/shop/single-products/product-3.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-3.jpg" %} />
-								</div>
-								<div class='item'>
-									<img src={% static 'images/shop/single-products/product-4.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-4.jpg" %} />
-								</div>
-								<div class='item'>
-									<img src={% static 'images/shop/single-products/product-5.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-5.jpg" %} />
-								</div>
-								<div class='item'>
-									<img src={% static 'images/shop/single-products/product-6.jpg' %} alt='' data-zoom-image={% static "images/shop/single-products/product-6.jpg" %} />
-								</div> -->
+								{% for img in product_img %}
+									{% if img.main %}
+										<div class='item active'>
+									{% else %}
+										<div class='item'>
+									{% endif %}
+										<img src="/media/{{img.image}}"  alt="{{img.description}}" data-zoom-image="/media/{(img.image}}"  />
+									</div>
+								{% endfor %}							
 								
 							</div>
 							
@@ -61,11 +51,17 @@
 						</div>
 						
 						<!-- thumb -->
-						<!-- <ol class='carousel-indicators mCustomScrollbar meartlab'>
-							<li data-target='#carousel-custom' data-slide-to='0' class='active'>
-								<img src={% static 'images/shop/single-products/product-1.jpg' %} alt='' />
-							</li>
-							<li data-target='#carousel-custom' data-slide-to='1'>
+						<ol class='carousel-indicators mCustomScrollbar meartlab'>
+							{% for img in product_img %}
+								{% if img.main %}
+									<li data-target='#carousel-custom' data-slide-to='{{ forloop.counter0 }}' class='active'>
+								{% else %}
+									<li data-target='#carousel-custom' data-slide-to='{{ forloop.counter0 }}' >
+								{% endif %}
+									<img src="/media/{{img.image}}" alt="{{img.description}}" />
+								</li>
+							{% endfor %}
+							<!-- <li data-target='#carousel-custom' data-slide-to='1'>
 								<img src={% static 'images/shop/single-products/product-2.jpg' %} alt='' />
 							</li>
 							<li data-target='#carousel-custom' data-slide-to='2'>
@@ -82,8 +78,9 @@
 							</li>
 							<li data-target='#carousel-custom' data-slide-to='6'>
 								<img src={% static 'images/shop/single-products/product-7.jpg' %} alt='' />
-							</li>
-						</ol> -->
+							</li> -->
+
+						</ol>
 					</div>
 				</div>
 			</div>
