--- a/product/templates/product/device.htm
+++ b/product/templates/product/device.htm
@@ -21,9 +21,9 @@
             <p>Choose to add a product</p>
             <h4 class="mt-10">Device</h4>
             <!-- device form -->
-            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/create/" method="POST" id="device" style="display: none;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/add/device/" method="POST" id="device" >
               {% csrf_token %}
-              <input type="hidden" name="product_type" value="medicine">
+              <input type="hidden" name="product_type" value="device">
               <div class="form-group">
                 <label for="inputName">Name:</label>
                 {{form.title}}
