--- a/product/templates/product/medicine.htm
+++ b/product/templates/product/medicine.htm
@@ -21,7 +21,7 @@
             <p>Choose to add a product</p>
             <h4 class="mt-10">Medicine</h4>
             <!-- medicine form -->
-            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/create/" method="POST" id="medicine" style="display: block;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/product/add/medicine/" method="POST" id="medicine" style="display: block;">
               {% csrf_token %}
               <input type="hidden" name="product_type" value="medicine">
               <div class="form-group">
