--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -223,24 +223,7 @@
             <!-- <span class="li dropdown dropdown-slide" style="margin-top: 20px;">
                 <a href="/product/signup" class="btn btn-secondary btn-small btn-round-full btn-pre" ><i class="></i> Add Product</a>
             </span> -->
-            <span class="dropdown dropdown-slide" id="btn-add">
-                <a href="#!" class="dropdown-toggle  btn-small" data-toggle="dropdown" data-hover="dropdown" data-delay="350"
-                    role="button" aria-haspopup="true" aria-expanded="false">Add Product <span
-                        class="tf-ion-android-add"></span></a>
-                <div class="dropdown-menu">
-                    <div class="row">
-
-                        <!-- Basic -->
-                        <div class="col-lg-12 col-md-6 mb-sm-3">
-                            <ul>
-                                <li><a href="/product/medicine">Medicine</a></li>
-                                <li><a href="/product/device">Device</a></li>
-                                <li><a href="/product/hygenic">Hygenic</a></li>
-                            </ul>
-                        </div>
-                    </div><!-- / .row -->
-                </div><!-- / .dropdown-menu -->
-            </span><!-- / Elements -->
+<!-- / Elements -->
 
                         
             <!-- .modal -->
