vendor and header changes of customer

--- a/customer/templates/customer/forget-password.htm
+++ b/customer/templates/customer/forget-password.htm
@@ -28,7 +28,7 @@
                             <button type="submit" class="btn btn-main text-center">Request password reset</button>
                         </div>
                     </form>
-                    <p class="mt-20"><a href="/vendor/login">Back to log in</a></p>
+                    <p class="mt-20"><a href="/customer/login">Back to log in</a></p>
                 </div>
             </div>
         </div>
