--- a/customer/templates/customer/address.htm
+++ b/customer/templates/customer/address.htm
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-{% include 'snippets/vendor-dashboard-header.htm'%}
+{% include 'snippets/customer-header.htm'%}
 {% include 'snippets/page-header.htm' %}
 
 <section class="user-dashboard page-wrapper">
@@ -10,12 +10,11 @@
     <div class="row">
       <div class="col-md-12">
           <ul class="list-inline dashboard-menu text-center">
-            <li><a href="/vendor/dashboard/">Dashboard</a></li>
-            <li><a href="/vendor/order/">Orders</a></li>
-            <li><a class="active" href="/vendor/address/">Address</a></li>
-            <li><a href="/vendor/profile-details/">Profile Details</a></li>
-            <li><a href="/vendor/product-details/">Product Details</a></li>
-        </ul>
+            <li><a href="/customer/dashboard/">Dashboard</a></li>
+            <li><a href="/customer/order/">Orders</a></li>
+            <li><a class="active" href="/customer/address/">Address</a></li>
+            <li><a href="/customer/profile-details/">Profile Details</a></li>
+          </ul>
         <div class="dashboard-wrapper user-dashboard">
           <div class="table-responsive">
             <table class="table">
