--- a/customer/templates/customer/order.htm
+++ b/customer/templates/customer/order.htm
@@ -2,18 +2,17 @@
 {% load static %}
 
 {% block content %}
-{% include 'snippets/vendor-dashboard-header.htm'%}
-{% include 'snippets/page-header.htm'%}
+{% include 'snippets/customer-header.htm'%}
+{% include 'snippets/page-header.htm' %}
 <section class="user-dashboard page-wrapper">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
-                    <li><a href="/vendor/dashboard/">Dashboard</a></li>
-                    <li><a class="active" href="/vendor/order/">Orders</a></li>
-                    <li><a href="/vendor/address/">Address</a></li>
-                    <li><a href="/vendor/profile-details/">Profile Details</a></li>
-                    <li><a href="/vendor/product-details/">Product Details</a></li>
+                    <li><a href="/customer/dashboard/">Dashboard</a></li>
+                    <li><a class="active" href="/customer/order/">Orders</a></li>
+                    <li><a href="/customer/address/">Address</a></li>
+                    <li><a href="/customer/profile-details/">Profile Details</a></li>
                 </ul>
                 <div style="margin-top: 20px;">
                     <nav class="navbar navbar-light bg-light text-center">
