alignement of add button, customer header, created snippets of vender and docter /update other

--- a/customer/templates/customer/profile-details.htm
+++ b/customer/templates/customer/profile-details.htm
@@ -12,7 +12,6 @@
                 <ul class="list-inline dashboard-menu text-center">
                     <li><a href="/customer/dashboard/">Dashboard</a></li>
                     <li><a href="/customer/order/">Orders</a></li>
-                    <li><a href="/customer/address/">Address</a></li>
                     <li><a class="active" href="/customer/profile-details/">Profile Details</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile">
@@ -39,8 +38,7 @@
         </div>
     </div>
 </section>
-
-{% include 'snippets/footer2.htm'%}
+{% include 'snippets/copyright-footer.htm'%}
 
 <!-- .modal -->
 <div class="modal fade" id="MyProfileModal">
