--- a/customer/templates/customer/vendors.htm
+++ b/customer/templates/customer/vendors.htm
@@ -2,13 +2,12 @@
 {% load static %}
 
 {% block content %}
-{% include 'snippets/header.htm'%}
-{% include 'snippets/page-header.htm'%}
+{% include 'snippets/customer-header.htm'%}
+{% include 'snippets/page-header.htm' %}
 
 {% include 'snippets/vendors.htm'%}
 
-{% include 'snippets/footer1.htm'%}
-{% include 'snippets/footer2.htm'%}
+{% include 'snippets/copyright-footer.htm'%}
 {% include 'snippets/chatbot.htm'%}
 
 {% endblock content %}
