--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -103,10 +103,10 @@
                     </li><!-- / Home -->
 
                     <li class="dropdown">
-                        <a href="/doctor">Doctor Consultation</a>
+                        <a href="/customer/doctor">Doctor Consultation</a>
                     </li>
                     <li class="dropdown">
-                        <a href="/vendors">Vendors</a>
+                        <a href="/customer/vendors">Vendors</a>
                     </li>
                    
                 </ul><!-- / .nav .navbar-nav -->
