--- a/customer/templates/customer/dashboard.htm
+++ b/customer/templates/customer/dashboard.htm
@@ -11,7 +11,6 @@
                 <ul class="list-inline dashboard-menu text-center">
                     <li><a class="active" href="/customer/dashboard/">Dashboard</a></li>
                     <li><a href="/customer/order/">Orders</a></li>
-                    <li><a href="/customer/address/">Address</a></li>
                     <li><a href="/customer/profile-details/">Profile Details</a></li>
                 </ul>
                 <div class="dashboard-wrapper user-dashboard">
@@ -71,5 +70,5 @@
         </div>
     </div>
 </section>
-{% include 'snippets/footer2.htm'%}
+{% include 'snippets/copyright-footer.htm'%}
 {% endblock content %}
