--- a/customer/templates/customer/order.htm
+++ b/customer/templates/customer/order.htm
@@ -11,7 +11,6 @@
                 <ul class="list-inline dashboard-menu text-center">
                     <li><a href="/customer/dashboard/">Dashboard</a></li>
                     <li><a class="active" href="/customer/order/">Orders</a></li>
-                    <li><a href="/customer/address/">Address</a></li>
                     <li><a href="/customer/profile-details/">Profile Details</a></li>
                 </ul>
                 <div style="margin-top: 20px;">
@@ -129,8 +128,7 @@
         </div> 
     </div>                                                                      
 </div>  
-{% include 'snippets/footer2.htm'%}
-
+{% include 'snippets/copyright-footer.htm'%}
 <!-- 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
