--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -99,7 +99,7 @@
 
                     <!-- Home -->
                     <li class="dropdown ">
-                        <a href="/shop">Shop</a>
+                        <a href="/product/shop">Shop</a>
                     </li><!-- / Home -->
 
                     <li class="dropdown">
